# media-foundry

./: .dockerignore  .env.example  .gitignore  CLIENT_IMPLEMENTATION.md  Dockerfile  Makefile  ORGANIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  test_all_features.py  tree.txt
client/: .env.example  QUICKSTART.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
client/src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  page.tsx
client/src/app/tools/: page.tsx
client/src/components/layout/: footer.tsx  header.tsx  theme-toggle.tsx
client/src/components/shared/: file-upload.tsx  processing-status.tsx
client/src/components/ui/: bento-grid.tsx  hero-highlight.tsx  moving-border.tsx  spotlight.tsx  text-reveal-card.tsx
client/src/lib/: utils.ts
client/src/services/: websocket.ts
client/src/types/: index.ts
docs/: ARCHITECTURE.md  DEPLOYMENT.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  RABBITMQ_INTEGRATION.md  TEST_RESULTS.md
examples/: client_example.py  test_audio.py  test_client.py  test_simple.py  test_speed.py
src/: __init__.py  main.py  main_rabbitmq.py
src/config/: settings.py
src/ffmpeg/: __init__.py  command_builder.py  metadata.py  runner.py
src/job_manager/: __init__.py  job.py  manager.py  rabbitmq_manager.py
src/logging/: __init__.py  logger.py
src/utils/: __init__.py  health.py
src/websocket/: __init__.py  models.py  server.py
tests/: test_ffmpeg_builder.py  test_job_manager.py  test_models.py
(+8 files in other folders)
